--- a/src/config.json
+++ b/src/config.json
@@ -1,12 +1,12 @@
 {
    "name": "小历",
-   "version": "1.1.0",
-   "identifier": "app.here.tinycal",
+   "version": "1.1.1",
+   "identifier": "foh.tinycal",
    "description": "A simple cal tool",
    "icon": "icon.png",
    "createdBy": "Lifesign",
    "website": "https://github.com/FriendsOfHere/tinycal",
-   "appcast": "https://raw.githubusercontent.com/FriendsOfHere/tinycal/master/appcast.xml",
+   "appcast": "https://raw.githubusercontent.com/FriendsOfHere/tinycal/master/src/appcast.xml",
    "script": "index.js",
    "defaultCategory": "quick",
    "displayOn": [
