--- a/src/config.json
+++ b/src/config.json
@@ -1,12 +1,12 @@
 {
-   "name": "小历",
+   "name": "Sweet Cal",
    "version": "1.1.1",
-   "identifier": "foh.tinycal",
+   "identifier": "foh.sweet-cal",
    "description": "A simple cal tool",
    "icon": "icon.png",
    "createdBy": "Lifesign",
-   "website": "https://github.com/FriendsOfHere/tinycal",
-   "appcast": "https://raw.githubusercontent.com/FriendsOfHere/tinycal/master/src/appcast.xml",
+   "website": "https://github.com/FriendsOfHere/sweet-cal",
+   "appcast": "https://raw.githubusercontent.com/FriendsOfHere/sweet-cal/master/src/appcast.xml",
    "script": "index.js",
    "defaultCategory": "quick",
    "displayOn": [
