--- a/src/config.json
+++ b/src/config.json
@@ -1,8 +1,8 @@
 {
    "name": "Sweet Cal",
-   "version": "1.1.1",
+   "version": "1.2.0",
    "identifier": "foh.sweet-cal",
-   "description": "A simple cal tool",
+   "description": "A tiny sweet cal.",
    "icon": "icon.png",
    "createdBy": "Lifesign",
    "website": "https://github.com/FriendsOfHere/sweet-cal",
